--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hellojessieee.github.io/me",
+  "homepage": "https://fair-ivo7.onrender.com/me",
   "name": "fairy-take",
   "version": "0.1.0",
   "private": true,
